--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./portainer-data:/data
+      - ./portainer:/data
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
