Fix incorrect folder name

--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./traefik-data/traefik.yml:/traefik.yml:ro
-      - ./traefik-data/acme.json:/acme.json
-      - ./traefik-data/configurations:/configurations
+      - ./traefik/traefik.yml:/traefik.yml:ro
+      - ./traefik/acme.json:/acme.json
+      - ./traefik/configurations:/configurations
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
