--- a/core/traefik/config.yml
+++ b/core/traefik/config.yml
@@ -1,13 +1,39 @@
-# Dynamic configuration
 http:
+  # routers:
+  #   service1:
+  #     entryPoints:
+  #       - "https"
+  #     rule: "Host(`service1.castelnuovo.xyz`)"
+  #     tls: {}
+  #     service: service1
+
+  # services:
+  #   service1:
+  #     loadBalancer:
+  #       servers:
+  #         - url: "http://192.168.1.12"
+  #       passHostHeader: true
+
   middlewares:
-    secureHeaders:
-      headers:
+    https-redirect:
+      redirectScheme:
+        scheme: https
+
+    default-headers:
+      default-headers:
+        # SSL Headers
         sslRedirect: true
         forceSTSHeader: true
         stsIncludeSubdomains: true
         stsPreload: true
         stsSeconds: 31536000
+        # Normal Headers
+        frameDeny: true
+        browserXssFilter: true
+        contentTypeNosniff: true
+        customFrameOptionsValue: SAMEORIGIN
+        customRequestHeaders:
+          X-Forwarded-Proto: https
 
     user-auth:
       basicAuth:
