--- a/core/traefik/traefik.yml
+++ b/core/traefik/traefik.yml
@@ -5,24 +5,26 @@ entryPoints:
   web:
     address: :80
     http:
-      redirections:
-        entryPoint:
-          to: websecure
+      middlewares:
+        - https-redirect@file
 
   websecure:
     address: :443
     http:
       middlewares:
-        - secureHeaders@file
+        - default-headers@file
       tls:
         certResolver: letsencrypt
+
+serversTransport:
+  insecureSkipVerify: true
 
 providers:
   docker:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
   file:
-    filename: /configurations/dynamic.yml
+    filename: /config.yml
 
 certificatesResolvers:
   letsencrypt:
