--- a/core/traefik/traefik.yml
+++ b/core/traefik/traefik.yml
@@ -5,8 +5,9 @@ entryPoints:
   web:
     address: :80
     http:
-      middlewares:
-        - https-redirect@file
+      redirections:
+        entryPoint:
+          to: websecure
 
   websecure:
     address: :443
@@ -24,7 +25,7 @@ providers:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
   file:
-    filename: /config.yml
+    filename: ./config.yml
 
 certificatesResolvers:
   letsencrypt:
