Add teresa.ltc and update config

--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -19,12 +19,14 @@ services:
       - ./traefik/acme.json:/acme.json
       - ./traefik/config.yml:/config.yml:ro
     labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=traefik-proxy"
-      - "traefik.http.routers.traefik-secure.entrypoints=websecure"
-      - "traefik.http.routers.traefik-secure.rule=Host(`traefik.castelnuovo.xyz`)"
-      - "traefik.http.routers.traefik-secure.middlewares=user-auth@file"
-      - "traefik.http.routers.traefik-secure.service=api@internal"
+      - traefik.enable: true
+      - traefik.docker.network: traefik-proxy
+      - traefik.http.routers.traefik-secure.rule: Host(`traefik.castelnuovo.xyz`)
+      - traefik.http.routers.traefik-secure.entrypoints: https
+      - traefik.http.routers.traefik-secure.middlewares: user-auth@file
+      - traefik.http.routers.traefik-secure.service: api@internal
+    environment:
+      CF_DNS_API_TOKEN: ${CLOUDFLARE_TOKEN}
 
   portainer:
     image: portainer/portainer-ce:latest
@@ -48,4 +50,5 @@ services:
 
 networks:
   traefik-proxy:
+    driver: bridge
     external: true
