--- a/core/traefik/traefik.yml
+++ b/core/traefik/traefik.yml
@@ -1,31 +1,77 @@
-api:
-  dashboard: true
-
-entryPoints:
-  web:
-    address: :80
-    http:
-      redirections:
-        entryPoint:
-          to: websecure
-
-  websecure:
-    address: :443
-    http:
-      middlewares:
-        - default-headers@file
-      tls:
-        certResolver: letsencrypt
+global:
+  checkNewVersion: true
+  sendAnonymousUsage: false
 
 serversTransport:
   insecureSkipVerify: true
 
+api:
+  dashboard: true
+
+entryPoints:
+  http:
+    address: :80
+    forwardedHeaders:
+      trustedIPs: &trustedIps
+        # Start of Clouflare public IP list
+        - 173.245.48.0/20
+        - 103.21.244.0/22
+        - 103.22.200.0/22
+        - 103.31.4.0/22
+        - 141.101.64.0/18
+        - 108.162.192.0/18
+        - 190.93.240.0/20
+        - 188.114.96.0/20
+        - 197.234.240.0/22
+        - 198.41.128.0/17
+        - 162.158.0.0/15
+        - 104.16.0.0/13
+        - 104.24.0.0/14
+        - 172.64.0.0/13
+        - 131.0.72.0/22
+        - 2400:cb00::/32
+        - 2606:4700::/32
+        - 2803:f800::/32
+        - 2405:b500::/32
+        - 2405:8100::/32
+        - 2a06:98c0::/29
+        - 2c0f:f248::/32
+        # End of Cloudlare public IP list
+    http:
+      redirections:
+        entryPoint:
+          to: https
+          scheme: https
+
+  https:
+    address: :443
+    forwardedHeaders:
+      trustedIPs: *trustedIps
+    http:
+      tls:
+        certResolver: letsencrypt
+        # Generate a wildcard domain certificate
+        domains:
+          - main: castelnuovo.xyz
+            sans:
+              - "*.castelnuovo.xyz"
+      middlewares:
+        - securityHeaders@file
+
 providers:
+  providersThrottleDuration: 2s
+
+  file:
+    filename: ./config.yml
+
   docker:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
-  file:
-    filename: ./config.yml
+    network: traefik-proxy
+    # Default host rule to containername.castelnuovo.xyz
+    defaultRule: "Host(`{{ index .Labels \"com.docker.compose.service\"}}.castelnuovo.xyz`)"
+    swarmModeRefreshSeconds: 15s
+    exposedByDefault: false
 
 certificatesResolvers:
   letsencrypt:
@@ -33,5 +79,8 @@ certificatesResolvers:
       email: luca@castelnuovo.xyz
       storage: acme.json
       keyType: EC384
-      httpChallenge:
-        entryPoint: web
+      dnsChallenge:
+        provider: cloudflare
+        resolvers:
+          - "1.1.1.1:53"
+          - "1.0.0.1:53"
