--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -20,33 +20,31 @@ services:
       - ./traefik/config.yml:/config.yml:ro
     labels:
       traefik.enable: true
-      # traefik.docker.network: traefik-proxy
       traefik.http.routers.traefik-secure.rule: Host(`traefik.castelnuovo.xyz`)
       traefik.http.routers.traefik-secure.entrypoints: https
       traefik.http.routers.traefik-secure.service: api@internal
-      # traefik.http.routers.traefik-secure.middlewares: user-auth@file
+      traefik.http.routers.traefik-secure.middlewares: user-auth@file
     environment:
       CF_DNS_API_TOKEN: ${CLOUDFLARE_TOKEN}
 
-  # portainer:
-  #   image: portainer/portainer-ce:latest
-  #   container_name: portainer
-  #   restart: unless-stopped
-  #   security_opt:
-  #     - no-new-privileges:true
-  #   networks:
-  #     - traefik-proxy
-  #   volumes:
-  #     - /etc/localtime:/etc/localtime:ro
-  #     - /var/run/docker.sock:/var/run/docker.sock:ro
-  #     - ./portainer:/data
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.docker.network=traefik-proxy"
-  #     - "traefik.http.routers.portainer-secure.entrypoints=websecure"
-  #     - "traefik.http.routers.portainer-secure.rule=Host(`portainer.castelnuovo.xyz`)"
-  #     - "traefik.http.routers.portainer-secure.service=portainer"
-  #     - "traefik.http.services.portainer.loadbalancer.server.port=9000"
+  portainer:
+    image: portainer/portainer-ce:latest
+    container_name: portainer
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    networks:
+      - traefik-proxy
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./portainer:/data
+    labels:
+      traefik.enable: true
+      traefik.http.routers.portainer-secure.rule: Host(`portainer.castelnuovo.xyz`)
+      traefik.http.routers.portainer-secure.entrypoints: https
+      traefik.http.routers.portainer-secure.service: portainer
+      traefik.http.services.portainer.loadbalancer.server.port: 9000
 
 networks:
   traefik-proxy:
