--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -66,11 +66,13 @@ providers:
     watch: true
 
   docker:
-    endpoint: "unix:///var/run/docker.sock"
-    exposedByDefault: false
     watch: true
     network: traefik-proxy
+    # Default host rule to containername.castelnuovo.xyz
+    defaultRule: "Host(`{{ index .Labels \"com.docker.compose.service\"}}.castelnuovo.xyz`)"
     swarmModeRefreshSeconds: 15s
+    exposedByDefault: false
+    endpoint: "unix:///var/run/docker.sock"
 
 log:
   level: INFO # ERROR
