update file paths

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./traefik/traefik.yml:/traefik.yml:ro
-      - ./traefik/acme.json:/acme.json
-      - ./traefik/config.yml:/config.yml:ro
+      - ./traefik.yml:/traefik.yml:ro
+      - ./acme.json:/acme.json
+      - ./config.yml:/config.yml:ro
     labels:
       traefik.enable: true
       traefik.http.routers.traefik.rule: Host(`traefik.castelnuovo.xyz`)
