--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   portainer:
-    image: portainer/portainer-ce:latest
+    image: portainer/portainer-ee:latest
     container_name: portainer
     restart: unless-stopped
     security_opt:
