update auth middleware

--- a/authelia/docker-compose.yml
+++ b/authelia/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   authelia:
     image: authelia/authelia:latest
-    container_name: auth
+    container_name: authelia
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
