--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       traefik.http.routers.traefik.rule: Host(`traefik.castelnuovo.xyz`)
       traefik.http.routers.traefik.entrypoints: https
       traefik.http.routers.traefik.service: api@internal
-      traefik.http.routers.traefik.middlewares: user-auth@file
+      traefik.http.routers.traefik.middlewares: auth@file
     environment:
       CF_DNS_API_TOKEN: ${CLOUDFLARE_TOKEN}
 
