--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -2,12 +2,45 @@ host: 0.0.0.0
 port: 9091
 log_level: warn
 
-# This secret can also be set using the env variables AUTHELIA_JWT_SECRET_FILE
-# I used this site to generate the secret: https://www.grc.com/passwords.htm
-# jwt_secret: SECRET_GOES_HERE # use docker secret file instead AUTHELIA_JWT_SECRET_FILE
-
-# https://docs.authelia.com/configuration/miscellaneous.html#default-redirection-url
+jwt_secret: AUTHELIA_JWT_SECRET_FILE
+default_2fa_method: totp
 default_redirection_url: https://authelia.castelnuovo.xyz
+
+log:
+  level: info
+  format: text
+  file_path: "/config/authelia.log"
+  keep_stdout: false
+
+# https://docs.authelia.com/configuration/access-control.html
+access_control:
+  default_policy: deny
+  rules:
+    - domain: authelia.castelnuovo.xyz
+      policy: bypass
+#    - domain: radarr.example.com
+#      policy: bypass
+#      subject: "group:admins"
+#      resources:
+#      - "^/api/.*$"
+    - domain: "test.castelnuovo.xyz"
+      policy: one_factor
+    - domain: "form.castelnuovo.xyz"
+      policy: two_factor
+
+regulation:
+  max_retries: 3
+  find_time: 120
+  ban_time: 300
+
+session:
+  name: castelnuovo_session
+  domain: auth.castelnuovo.xyz
+  same_site: lax
+  secret: AUTHELIA_SESSION_SECRET_FILE
+  expiration: 3600
+  inactivity: 300
+  remember_me_duration: 1M
 
 totp:
   issuer: authelia.castelnuovo.xyz
@@ -16,78 +49,56 @@ totp:
   period: 30 # min 15
   skew: 1
 
+webauthn:
+  disable: false
+  display_name: authelia.castelnuovo.xyz
+  attestation_conveyance_preference: indirect
+  user_verification: preferred
+  timeout: 60s
+
+password_policy:
+  standard:
+    enabled: true
+    min_length: 8
+    max_length: 0
+    require_uppercase: false
+    require_lowercase: false
+    require_number: false
+    require_special: false
+  zxcvbn:
+    enabled: true
+    min_score: 2
+
 authentication_backend:
   file:
     path: /config/users_database.yml
-    # customize passwords based on https://docs.authelia.com/configuration/authentication/file.html
     password:
       algorithm: argon2id
       iterations: 1
       salt_length: 16
       parallelism: 8
-      memory: 1024 # blocks this much of the RAM. Tune this.
-
-# https://docs.authelia.com/configuration/access-control.html
-access_control:
-  default_policy: deny
-  rules:
-    # Rules applied to everyone
-    - domain: authelia.example.com
-      policy: bypass
-#    - domain: radarr.example.com
-#      policy: bypass
-#      subject: "group:admins"
-#      resources:
-#      - "^/api/.*$"
-#    - domain: "*.example.com"
-#      policy: one_factor
-    - domain: "*.example.com"
-      policy: two_factor
-    - domain: "example.com"
-      policy: two_factor
-
-session:
-  name: authelia_session
-  # This secret can also be set using the env variables AUTHELIA_SESSION_SECRET_FILE
-  # Used a different secret, but the same site as jwt_secret above.
-  # secret: SECRET_GOES_HERE # use docker secret file instead AUTHELIA_SESSION_SECRET_FILE
-  expiration: 3600 # 1 hour
-  inactivity: 300 # 5 minutes
-  domain: example.com # Should match whatever your root protected domain is
-
-# Optional. Can improve performance on a busy system. If not enabled, session info is stored in memory.
-#  redis:
-#    host: redis
-#    port: 6379
-    # This secret can also be set using the env variables AUTHELIA_SESSION_REDIS_PASSWORD_FILE
-    # password: authelia
-
-regulation:
-  max_retries: 3
-  find_time: 120
-  ban_time: 300
+      memory: 1024
 
 storage:
-# For local storage, uncomment lines below and comment out mysql. https://docs.authelia.com/configuration/storage/sqlite.html
-#  local:
-#    path: /config/db.sqlite3
-  mysql:
-  # MySQL allows running multiple authelia instances. Create database and enter details below.
-    host: MYSQL_HOST
-    port: 3306
-    database: authelia
-    username: DBUSERNAME
-    # Password can also be set using a secret: https://docs.authelia.com/configuration/secrets.html
-    # password: use docker secret file instead AUTHELIA_STORAGE_MYSQL_PASSWORD_FILE
+  encryption_key: AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE
+
+  local:
+    path: /config/db.sqlite3
+  # mysql:
+  #   host: MYSQL_HOST
+  #   port: 3306
+  #   database: authelia
+  #   username: DBUSERNAME
+  #   password: AUTHELIA_STORAGE_MYSQL_PASSWORD_FILE
 
 notifier:
-  smtp:
-    username: SMTP_USERNAME
-    # This secret can also be set using the env variables AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE
-    # password: # use docker secret file instead AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE
-    host: SMTP_HOST
-    port: 587 #465
-    sender: SENDER_EMAIL
-  # For testing purpose, notifications can be sent in a file. Be sure map the volume in docker-compose.
-#  filesystem:
-#    filename: /tmp/authelia/notification.txt
+  filesystem:
+    filename: /config/notification.txt
+
+  # smtp:
+  #   host: smtp.mailbox.org
+  #   username: luca@castelnuovo.xyz
+  #   password: AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE
+  #   port: 465
+  #   sender: "authelia.castelnuovo.xyz <luca@castelnuovo.xyz>"
+  #   subject: "[authelia.castelnuovo.xyz] {title}"
