--- a/authelia/docker-compose.yml
+++ b/authelia/docker-compose.yml
@@ -15,11 +15,11 @@ services:
       traefik.enable: true
       traefik.http.routers.authelia.entryPoints: https
     environment:
-      - AUTHELIA_JWT_SECRET_FILE=/config/secrets/jwt
-      - AUTHELIA_SESSION_SECRET_FILE=/config/secrets/session
-      - AUTHELIA_STORAGE_MYSQL_PASSWORD_FILE=/config/secrets/mysql
-      - AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE=/config/secrets/smtp
-      - AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE=/config/secrets/encryption
+      # - AUTHELIA_JWT_SECRET_FILE=/config/secrets/jwt
+      # - AUTHELIA_SESSION_SECRET_FILE=/config/secrets/session
+      # - AUTHELIA_STORAGE_MYSQL_PASSWORD_FILE=/config/secrets/mysql
+      # - AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE=/config/secrets/smtp
+      # - AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE=/config/secrets/encryption
 
 networks:
   traefik-proxy:
