--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -1,101 +1,80 @@
-server:
-  host: 0.0.0.0
-  port: 9091
-
-jwt_secret: AUTHELIA_JWT_SECRET_FILE
-default_2fa_method: totp
-default_redirection_url: https://authelia.castelnuovo.xyz
+theme: dark
+jwt_secret: "YOUR_JWT_SECRET"
+default_redirection_url: https://castelnuovo.xyz
 
 log:
   level: info
-  format: text
   file_path: "/config/authelia.log"
-  keep_stdout: false
+  keep_stdout: true
+
+totp:
+  disable: false
+  issuer: authelia.castelnuovo.xyz
+
+webauthn:
+  disable: true
+  display_name: authelia.castelnuovo.xyz
+
+authentication_backend:
+  disable_reset_password: true
+  file:
+    path: /config/users_database.yml
+    password:
+      memory: 1024
+      parallelism: 8
 
 # https://docs.authelia.com/configuration/access-control.html
 access_control:
   default_policy: deny
   rules:
-    - domain: authelia.castelnuovo.xyz
+    - domain: "authelia.castelnuovo.xyz"
       policy: bypass
-    - domain: "test.castelnuovo.xyz"
-      policy: one_factor
-    - domain: "form.castelnuovo.xyz"
-      policy: two_factor
 
-regulation:
-  max_retries: 3
-  find_time: 120
-  ban_time: 300
+    - domain: "proxmox.castelnuovo.xyz"
+      # subject: "group:proxmox.castelnuovo.xyz"
+      policy: one_factor
+      # policy: two_factor
+
+    # - domain: "*.castelnuovo.xyz"
+    #   subject: "group:admins"
+    #   policy: one_factor
 
 session:
-  name: castelnuovo_session
-  domain: auth.castelnuovo.xyz
+  name: authelia_session
+  domain: authelia.castelnuovo.xyz
   same_site: lax
-  # secret: AUTHELIA_SESSION_SECRET_FILE
-  secret: test_credential
-  expiration: 3600
-  inactivity: 300
+  secret: "YOUR_SESSION_SECRET"
+  expiration: 1h
+  inactivity: 5m
   remember_me_duration: 1M
 
-totp:
-  issuer: authelia.castelnuovo.xyz
-  algorithm: sha512
-  digits: 8 # default is 6
-  period: 30 # min 15
-  skew: 1
-
-webauthn:
-  disable: false
-  display_name: authelia.castelnuovo.xyz
-  attestation_conveyance_preference: indirect
-  user_verification: preferred
-  timeout: 60s
-
-password_policy:
-  standard:
-    enabled: false
-    min_length: 8
-    max_length: 0
-    require_uppercase: false
-    require_lowercase: false
-    require_number: false
-    require_special: false
-  zxcvbn:
-    enabled: true
-    min_score: 2
-
-authentication_backend:
-  file:
-    path: /config/users_database.yml
-    password:
-      algorithm: argon2id
-      iterations: 1
-      salt_length: 16
-      parallelism: 8
-      memory: 1024
+regulation:
+  max_retries: 10
+  find_time: 10m
+  ban_time: 12h
 
 storage:
-  # encryption_key: AUTHELIA_STORAGE_ENCRYPTION_KEY_FILE
-  encryption_key: test_credential
-
+  encryption_key: "YOUR_STORAGE_ENCRYPTION_KEY"
   local:
     path: /config/db.sqlite3
+
   # mysql:
-  #   host: MYSQL_HOST
+  #   host: mariadb
   #   port: 3306
   #   database: authelia
-  #   username: DBUSERNAME
-  #   password: AUTHELIA_STORAGE_MYSQL_PASSWORD_FILE
+  #   username: authelia
+  #   password: "YOUR_MYSQL_AUTHELIA_DB_PASSWORD"
 
 notifier:
+  disable_startup_check: false
   filesystem:
     filename: /config/notification.txt
 
   # smtp:
   #   host: smtp.mailbox.org
-  #   username: luca@castelnuovo.xyz
-  #   password: AUTHELIA_NOTIFIER_SMTP_PASSWORD_FILE
   #   port: 465
-  #   sender: "authelia.castelnuovo.xyz <luca@castelnuovo.xyz>"
+  #   username: luca@castelnuovo.xyz
+    # password: "YOUR_EMAIL_PASSWORD"
+    # sender: "authelia.castelnuovo.xyz <luca@castelnuovo.xyz>" # test with authelia.castelnuovo.xyz
   #   subject: "[authelia.castelnuovo.xyz] {title}"
+    # startup_check_address: test@authelia.com
