--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -32,12 +32,10 @@ access_control:
 
     - domain: proxmox.castelnuovo.xyz
       # subject: group:proxmox.castelnuovo.xyz
-      # policy: one_factor
-      policy: two_factor
+      policy: one_factor
 
-    # - domain: *.castelnuovo.xyz
-    #   subject: group:admins
-    #   policy: one_factor
+    - domain: "*.castelnuovo.xyz"
+      policy: one_factor
 
 session:
   name: authelia_session
