--- a/authelia/users_database.yml
+++ b/authelia/users_database.yml
@@ -4,6 +4,5 @@ users:
     password: "$argon2id$v=19$m=65536,t=1,p=8$RVNMT01xZ0ErdzB2N3JXZQ$xCG+tBvHab6y9TFo6/GUorwqt8gNPvu4V5kOkvwd9+M"
     email: luca@castelnuovo.xyz
     groups:
-      - admins
-      - dev
+      - admin
       # - proxmox.castelnuovo.xyz
