show error message is CF_TOKEN is not set

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       traefik.http.routers.traefik.service: api@internal
       traefik.http.routers.traefik.middlewares: auth@file
     environment:
-      CF_DNS_API_TOKEN: ${CLOUDFLARE_TOKEN}
+      CF_DNS_API_TOKEN: ${CLOUDFLARE_TOKEN:?cloudflare token required}
 
 networks:
   traefik-proxy:
