move secrets to env file

--- a/authelia/docker-compose.yml
+++ b/authelia/docker-compose.yml
@@ -15,10 +15,10 @@ services:
       traefik.enable: true
       traefik.http.routers.authelia.entryPoints: https
     environment:
-      AUTHELIA_JWT_SECRET: "2pdBxDeYXgbtDmIwhhvlDejNtZrdW8Z25ke4qaYQQDQ06Yudna7i4R4JbXTRZtVh"
-      AUTHELIA_SESSION_SECRET: "2pdBxDeYXgbtDmIwhhvlDejNtZrdW8Z25ke4qaYQQDQ06Yudna7i4R4JbXTRZtVh"
-      AUTHELIA_STORAGE_ENCRYPTION_KEY: "2pdBxDeYXgbtDmIwhhvlDejNtZrdW8Z25ke4qaYQQDQ06Yudna7i4R4JbXTRZtVh"
-      # AUTHELIA_NOTIFIER_SMTP_PASSWORD: "/config/secrets/smtp"
+      AUTHELIA_JWT_SECRET: ${AUTHELIA_JWT_SECRET:?AUTHELIA_JWT_SECRET required}
+      AUTHELIA_SESSION_SECRET: ${AUTHELIA_SESSION_SECRET:?AUTHELIA_SESSION_SECRET required}
+      AUTHELIA_STORAGE_ENCRYPTION_KEY: ${AUTHELIA_STORAGE_ENCRYPTION_KEY:?AUTHELIA_STORAGE_ENCRYPTION_KEY required}
+      AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${AUTHELIA_NOTIFIER_SMTP_PASSWORD:?AUTHELIA_NOTIFIER_SMTP_PASSWORD required}
 
 networks:
   traefik-proxy:
