--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -13,7 +13,7 @@ access_control:
       policy: two_factor
 
 theme: dark
-default_redirection_url: https://castelnuovo.xyz
+default_redirection_url: https://authelia.castelnuovo.xyz
 
 log:
   level: info
