--- a/authelia/docker-compose.yml
+++ b/authelia/docker-compose.yml
@@ -15,10 +15,10 @@ services:
       traefik.enable: true
       traefik.http.routers.authelia.entryPoints: https
     environment:
-      AUTHELIA_JWT_SECRET: ${AUTHELIA_JWT_SECRET:?AUTHELIA_JWT_SECRET required}
-      AUTHELIA_SESSION_SECRET: ${AUTHELIA_SESSION_SECRET:?AUTHELIA_SESSION_SECRET required}
-      AUTHELIA_STORAGE_ENCRYPTION_KEY: ${AUTHELIA_STORAGE_ENCRYPTION_KEY:?AUTHELIA_STORAGE_ENCRYPTION_KEY required}
-      AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${AUTHELIA_NOTIFIER_SMTP_PASSWORD:?AUTHELIA_NOTIFIER_SMTP_PASSWORD required}
+      AUTHELIA_JWT_SECRET: ${AUTHELIA_JWT_SECRET:?error}
+      AUTHELIA_SESSION_SECRET: ${AUTHELIA_SESSION_SECRET:?error}
+      AUTHELIA_STORAGE_ENCRYPTION_KEY: ${AUTHELIA_STORAGE_ENCRYPTION_KEY:?error}
+      AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${AUTHELIA_NOTIFIER_SMTP_PASSWORD:?error}
 
 networks:
   traefik-proxy:
