--- a/authelia/.env.example
+++ b/authelia/.env.example
@@ -1,4 +1,4 @@
-# TODO: explain constraints for the following values
+# Use "openssl rand -base64 30" to generate secrets
 AUTHELIA_JWT_SECRET=
 AUTHELIA_SESSION_SECRET=
 AUTHELIA_STORAGE_ENCRYPTION_KEY=
