--- a/emailengine/docker-compose.yml
+++ b/emailengine/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3"
 
 services:
   email:
@@ -26,7 +26,9 @@ services:
       - no-new-privileges:true
     network_mode: host
     volumes:
-      - /data
+      - ./redis:/data
+    ports:
+      - '6379'
 
 networks:
   traefik-proxy:
