change url and comment out settings

--- a/emailengine/docker-compose.yml
+++ b/emailengine/docker-compose.yml
@@ -17,18 +17,20 @@ services:
       - redis
     environment:
       EENGINE_SECRET: ${EENGINE_SECRET:?error}
-      EENGINE_REDIS: redis://redis:6379/2
+      EENGINE_REDIS: 'redis://redis:6379/2'
 
   redis:
     image: redis:alpine
     restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    network_mode: host
+      #   security_opt:
+  #     - no-new-privileges:true
+  #   network_mode: host
+  #   volumes:
+  #     - ./redis:/data
     volumes:
-      - ./redis:/data
-    ports:
-      - '6379'
+        - /data
+    # ports:
+      # - '6379'
 
 networks:
   traefik-proxy:
