--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:?error}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:?error}
-      MINIO_DOMAIN: storage.castelnuovo.xyz
+      MINIO_SERVER_URL: storage.castelnuovo.xyz
     command: server --console-address ":9001" /data
 
 networks:
