--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -44,8 +44,8 @@ services:
       - traefik-proxy
     volumes:
       - ./redis:/data
-    ports:
-      - 6379:6379
+    # ports:
+    #   - 6379:6379
 
 networks:
   traefik-proxy:
