--- a/fusionauth/.env.example
+++ b/fusionauth/.env.example
@@ -1,8 +1,6 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
 DATABASE_USERNAME=fusionauth
 DATABASE_PASSWORD=
+DATABASE_USERNAME_ROOT=root
+DATABASE_PASSWORD_ROOT=
 
 ES_JAVA_OPTS="-Xms512m -Xmx512m"
-
-FUSIONAUTH_APP_MEMORY=512M
