--- a/fusionauth/docker-compose.yml
+++ b/fusionauth/docker-compose.yml
@@ -1,46 +1,29 @@
 version: "3"
 
 services:
-  db:
-    image: postgres:12.9
-    environment:
-      PGDATA: /var/lib/postgresql/data/pgdata
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    networks:
-      - db
-    restart: unless-stopped
-    volumes:
-      - db_data:/var/lib/postgresql/data
-
   fusionauth:
     image: fusionauth/fusionauth-app:latest
-    depends_on:
-      - db
+    container_name: fusionauth
+     restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    networks:
+      - traefik-proxy
+    labels:
+      traefik.enable: true
+      traefik.http.routers.email.entryPoints: https
+      traefik.http.services.email.loadbalancer.server.port: 9011
+    volumes:
+      - ./config:/usr/local/fusionauth/config
     environment:
-      DATABASE_URL: jdbc:postgresql://db:5432/fusionauth
-      DATABASE_ROOT_USERNAME: ${POSTGRES_USER}
-      DATABASE_ROOT_PASSWORD: ${POSTGRES_PASSWORD}
+      DATABASE_URL: jdbc:postgresql://postgres:5432/fusionauth
       DATABASE_USERNAME: ${DATABASE_USERNAME}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      FUSIONAUTH_APP_MEMORY: ${FUSIONAUTH_APP_MEMORY}
+      DATABASE_ROOT_USERNAME: ${DATABASE_USERNAME_ROOT}
+      DATABASE_ROOT_PASSWORD: ${DATABASE_PASSWORD_ROOT}
+      FUSIONAUTH_APP_MEMORY: 512M
       FUSIONAUTH_APP_RUNTIME_MODE: production
-      FUSIONAUTH_APP_URL: http://fusionauth:9011
+      FUSIONAUTH_APP_URL: https://fusionauth.castelnuovo.xyz
       SEARCH_TYPE: database
-
-
-    networks:
-     - db
-    restart: unless-stopped
     ports:
-      - 8000:9011
-    volumes:
-      - fa_config:/usr/local/fusionauth/config
-
-networks:
-  db:
-    driver: bridge
-
-volumes:
-  db_data:
-  fa_config:
+      - 9011:9011
