--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -10,15 +10,15 @@ services:
     networks:
       - traefik-proxy
     labels:
-      traefik.enable: true
+     traefik.enable: true
 
-      traefik.http.routers.s3.rule: Host(`s3.castelnuovo.xyz`)
-      traefik.http.routers.s3.entrypoints: https
+      traefik.http.routers.s3.entryPoints: https
       traefik.http.services.s3.loadbalancer.server.port: 9004
+      traefik.http.routers.s3.rule: Host(`s3.castelnuovo.xyz`)
 
-      traefik.http.routers.s3-console.rule: Host(`s3-console.castelnuovo.xyz`)
-      traefik.http.routers.s3-console.entrypoints: https
+      traefik.http.routers.s3-console.entryPoints: https
       traefik.http.services.s3-console.loadbalancer.server.port: 9001
+      traefik.http.routers.s3-console.rule: Host(`s3-console.castelnuovo.xyz`)
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:?error}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:?error}
