--- a/emailengine/docker-compose.yml
+++ b/emailengine/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - no-new-privileges:true
     networks:
       - traefik-proxy
+      - email-redis-bridge
     labels:
       traefik.enable: true
       traefik.http.routers.email.entryPoints: https
@@ -36,7 +37,7 @@ services:
     security_opt:
       - no-new-privileges:true
     networks:
-      - traefik-proxy
+      - email-redis-bridge
     volumes:
         - ./redis:/data
     expose:
@@ -46,3 +47,5 @@ networks:
   traefik-proxy:
     driver: bridge
     external: true
+  email-redis-bridge:
+    driver: bridge
