--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -11,12 +11,14 @@ services:
       - traefik-proxy
     labels:
       traefik.enable: true
-      traefik.http.routers.s3.entryPoints: https
-      traefik.http.services.s3.loadbalancer.server.port: 9001
 
-      # traefik.http.routers.s3-console.entryPoints: https
-      # traefik.http.services.s3-console.loadbalancer.server.port: 9001
-      # traefik.http.routers.s3-console.rule: Host(`s3-console.castelnuovo.xyz`)
+      traefik.http.routers.s3.rule: Host(`s3.castelnuovo.xyz`)
+      traefik.http.routers.s3.service: s3
+      traefik.http.services.s3.loadbalancer.server.port: 9004
+
+      traefik.http.routers.s3-console.rule: Host(`s3-console.castelnuovo.xyz`)
+      traefik.http.routers.s3-console.service: s3-console
+      traefik.http.services.s3-console.loadbalancer.server.port: 9001
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:?error}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:?error}
